--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react-icons": "^4.9.0",
     "styled-components": "^6.0.0-rc.3",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "tailwind-styled-components": "^2.2.0"
   }
 }
