--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "sharp": "^0.32.1",
     "styled-components": "^6.0.0-rc.3",
     "tailwindcss": "3.3.2"
   },
