--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "framer-motion": "^10.12.16",
-    "next": "13.4.4",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "emailjs-com": "^3.2.0",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "express": "^4.18.2",
+    "framer-motion": "^10.12.17",
+    "fs": "^0.0.1-security",
+    "next": "^13.4.7",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0",
-    "styled-components": "^6.0.0-rc.3",
+    "react-icons": "^4.10.1",
+    "styled-components": "^6.0.0-rc.6",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/nodemailer": "^6.4.8",
     "tailwind-styled-components": "^2.2.0"
   }
 }
