--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "next": "^13.4.7",
     "nodemailer": "^6.9.3",
+    "nodemailer-express-handlebars": "^6.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
