--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.0-rc.6",
     "tailwindcss": "3.3.2"
   },
