--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.0-rc.6",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "twin.macro": "^3.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
