--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "emailjs-com": "^3.2.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "express": "^4.18.2",
     "framer-motion": "^10.12.17",
-    "fs": "^0.0.1-security",
+    "module": "^1.2.5",
     "next": "^13.4.9",
     "nodemailer": "^6.9.3",
     "nodemailer-express-handlebars": "^6.1.0",
@@ -35,5 +38,10 @@
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.8",
     "tailwind-styled-components": "^2.2.0"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
