--- a/package.json
+++ b/package.json
@@ -21,23 +21,27 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
     "module": "^1.2.5",
-    "next": "^13.4.9",
+    "next": "^13.4.19",
     "nodemailer": "^6.9.3",
     "nodemailer-express-handlebars": "^6.1.0",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.0.0-rc.6",
-    "tailwindcss": "3.3.2",
-    "twin.macro": "^3.3.1"
+    "styled-components": "^6.0.0-rc.6"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.11.0",
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.8",
-    "tailwind-styled-components": "^2.2.0"
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-twin": "^1.1.0",
+    "perf_hooks": "^0.0.1",
+    "tailwind-styled-components": "^2.2.0",
+    "tailwindcss": "^3.3.3",
+    "twin.macro": "^3.4.0"
   },
   "browser": {
     "fs": false,
