--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "emailjs-com": "^3.2.0",
@@ -24,7 +23,6 @@
     "next": "^13.4.19",
     "nodemailer": "^6.9.3",
     "nodemailer-express-handlebars": "^6.1.0",
-    "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -36,11 +34,12 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.8",
+    "autoprefixer": "^10.4.15",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-twin": "^1.1.0",
     "perf_hooks": "^0.0.1",
+    "postcss": "^8.4.28",
     "tailwind-styled-components": "^2.2.0",
-    "tailwindcss": "^3.3.3",
     "twin.macro": "^3.4.0"
   },
   "browser": {
