--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "body-parser": "^1.20.2",
     "emailjs-com": "^3.2.0",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^14.0.2",
     "framer-motion": "^10.12.17",
     "module": "^1.2.5",
-    "next": "^13.4.19",
+    "next": "^14.0.2",
     "nodemailer": "^6.9.3",
     "nodemailer-express-handlebars": "^6.1.0",
     "react": "^18.2.0",
